modules/dpe/server/src/snapshots/dpe_server__fragments__tests__contributors_tab.snap
---
source: modules/dpe/server/src/fragments.rs
expression: html.as_ref()
---
<div id="project-tabs" data-on:datastar-fetch="(evt.detail.type === 'error' || evt.detail.type === 'retries-failed') &amp;&amp; evt.detail.el.closest('#project-tabs') &amp;&amp; (window.location.href = evt.detail.el.getAttribute('href'))"><div role="tablist" aria-label="Project details" aria-orientation="horizontal" data-on:keydown="const tabs=[...evt.currentTarget.querySelectorAll('[role=tab]')];const idx=tabs.indexOf(evt.target);if(idx&lt;0)return;let next;if(evt.key==='ArrowRight')next=tabs[(idx+1)%tabs.length];else if(evt.key==='ArrowLeft')next=tabs[(idx-1+tabs.length)%tabs.length];else if(evt.key==='Home')next=tabs[0];else if(evt.key==='End')next=tabs[tabs.length-1];else if(evt.key===' '){evt.preventDefault();evt.target.click();return}else return;evt.preventDefault();next.focus()" class="tabs" style="border-width: 0;"><a href="/projects/0001?tab=overview" rel="external" role="tab" id="tab-overview" aria-selected="false" aria-controls="tab-panel" tabindex="-1" data-on:click__prevent="@get('/projects/0001/tab/overview', {retry: 'never'})" data-indicator:_tab_loading class="tab-label"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024" fill="currentColor" class="tab-icon"><path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z" />
<path d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z" /></svg><span>Overview</span></a><!><a href="/projects/0001?tab=contributors" rel="external" role="tab" id="tab-contributors" aria-selected="true" aria-controls="tab-panel" tabindex="0" data-on:click__prevent="@get('/projects/0001/tab/contributors', {retry: 'never'})" data-indicator:_tab_loading class="tab-label !text-primary-600 !border-primary-600"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="tab-icon"><path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1zm-7.978-1L7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002-.014.002zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0M6.936 9.28a6 6 0 0 0-1.23-.247A7 7 0 0 0 5 9c-4 0-5 3-5 4q0 1 1 1h4.216A2.24 2.24 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816M4.92 10A5.5 5.5 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0m3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4" /></svg><span>Contributors</span></a></div><div id="tab-panel" role="tabpanel" aria-labelledby="tab-contributors" class="tab-panel" style="display: block;"><!></div></div>
