modules/dpe/server/src/snapshots/dpe_server__fragments__tests__project_sidebar_real_project.snap
---
source: modules/dpe/server/src/fragments.rs
assertion_line: 569
expression: html
---
<div class="card card-bordered overflow-visible dpe-small p-4 space-y-4 text-gray-700 lg:w-96"><div class="space-y-4"><h2 class="dpe-title">Cite this Project</h2><div><h3 class="dpe-subtitle">Permalink</h3><div class="card card-bordered w-full bg-gray-50 text-gray-700 text-sm"><div class="card-body"><div class="flex items-center justify-between gap-3"><a href="https://ark.dasch.swiss/ark:/72163/1/0803" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline break-all flex-1">ark:/72163/1/0803</a><button class="btn btn-ghost px-1 py-0.5 text-xs tooltip tooltip-left flex-shrink-0 inline-flex items-center justify-center min-h-6 min-w-6" aria-label="Copy" data-tip="Copy" data-copy-text="https://ark.dasch.swiss/ark:/72163/1/0803" onclick="var status = this.nextElementSibling;
try {
navigator.clipboard.writeText(this.dataset.copyText);
this.setAttribute('data-tip', 'Copied!');
if (status) status.textContent = 'Copied to clipboard';
var btn = this;
setTimeout(function() {
btn.setAttribute('data-tip', 'Copy');
if (status) status.textContent = '';
}, 2000);
} catch(e) {
this.setAttribute('data-tip', 'Copy failed');
if (status) status.textContent = 'Copy failed';
}"><svg class="icon w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" aria-hidden="true" focusable="false"><rect x="128" y="128" width="336" height="336" rx="57" ry="57" style="fill:none;stroke:#000;stroke-linejoin:round;stroke-width:32px" />
<path d="M383.5,128l.5-24a56.16,56.16,0,0,0-56-56H112a64.19,64.19,0,0,0-64,64V328a56.16,56.16,0,0,0,56,56h24" style="fill:none;stroke:#000;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px" /></svg></button><span class="sr-only" role="status" aria-live="polite"></span></div></div></div></div><div><h3 class="dpe-subtitle">Citation</h3><div class="card card-bordered w-full bg-gray-50 text-gray-700 text-sm"><div class="card-body"><div class="flex items-center"><div class="flex-1">Die Bilderfolgen der Basler Frühdrucke: Spätmittelalterliche Didaxe als Bild-Text-Lektüre (2012) DaSCH. ark.dasch.swiss/ark:/72163/1/0803</div><button class="btn btn-ghost px-1 py-0.5 text-xs tooltip tooltip-left flex-shrink-0 inline-flex items-center justify-center min-h-6 min-w-6" aria-label="Copy" data-tip="Copy" data-copy-text="Die Bilderfolgen der Basler Frühdrucke: Spätmittelalterliche Didaxe als Bild-Text-Lektüre (2012) DaSCH. ark.dasch.swiss/ark:/72163/1/0803" onclick="var status = this.nextElementSibling;
try {
navigator.clipboard.writeText(this.dataset.copyText);
this.setAttribute('data-tip', 'Copied!');
if (status) status.textContent = 'Copied to clipboard';
var btn = this;
setTimeout(function() {
btn.setAttribute('data-tip', 'Copy');
if (status) status.textContent = '';
}, 2000);
} catch(e) {
this.setAttribute('data-tip', 'Copy failed');
if (status) status.textContent = 'Copy failed';
}"><svg class="icon w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" aria-hidden="true" focusable="false"><rect x="128" y="128" width="336" height="336" rx="57" ry="57" style="fill:none;stroke:#000;stroke-linejoin:round;stroke-width:32px" />
<path d="M383.5,128l.5-24a56.16,56.16,0,0,0-56-56H112a64.19,64.19,0,0,0-64,64V328a56.16,56.16,0,0,0,56,56h24" style="fill:none;stroke:#000;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px" /></svg></button><span class="sr-only" role="status" aria-live="polite"></span></div></div></div></div><div class="dpe-divider"></div><div><h3 class="dpe-title">Data Access</h3><div><div class="dpe-subtitle">Access Rights</div><div>Full Open Access</div></div></div><div><div class="dpe-subtitle">License</div><a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer" class="block mb-1"><img src="/assets/images/cc-licenses/by-4.0.svg" alt="Creative Commons Attribution 4.0 International License" class="h-8" title="CC BY 4.0"></a><div>(2012-08-31)</div></div><div><h3 class="dpe-subtitle">Copyright</h3><span>Die Bilderfolgen der Basler Frühdrucke: Spätmittelalterliche Didaxe als Bild-Text-Lektüre</span></div><div><div class="dpe-subtitle">Authorship</div><div><div><span class="text-danger-600 font-mono text-xs">CALCULATED</span></div></div></div><div><h3 class="dpe-subtitle">Contact</h3><div class="space-y-2"><div class="card card-bordered w-full bg-gray-50 text-gray-700 text-sm"><div class="card-body"><div class="font-medium"><span>Lukas Rosenthaler</span></div><div class="text-gray-600">Assistant Professor, Prof. Dr.</div><div class="text-gray-600">Digital Humanities Lab (DHLab), University of Basel</div></div></div></div></div><div class="dpe-divider"></div><h3 class="dpe-title">Project Timeline</h3><div><div class="dpe-subtitle">Period</div><div><span>2008-06-01 – 2012-08-31</span></div></div><div><div class="dpe-subtitle">Status</div><div>Finished</div></div><div class="dpe-divider"></div><h3 class="dpe-title">Funding</h3><div><div class="space-y-2"><div class="dpe-subtitle">Grants</div><div class="card card-bordered w-full bg-gray-50 text-gray-700 text-sm"><div class="card-body"><div><span><span class="font-semibold">Swiss National Science Foundation (SNSF)</span></span></div><div>Grant: 120378</div><div>Project funding</div><a href="https://data.snf.ch/grants/grant/120378" target="_blank" rel="noopener noreferrer" class="text-primary items-center gap-1">More info<svg class="icon w-3 h-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false"><path d="M15.5 2.25a.75.75 0 0 1 .75-.75h5.5a.75.75 0 0 1 .75.75v5.5a.75.75 0 0 1-1.5 0V4.06l-6.22 6.22a.75.75 0 1 1-1.06-1.06L19.94 3h-3.69a.75.75 0 0 1-.75-.75Z" />
<path d="M2.5 4.25c0-.966.784-1.75 1.75-1.75h8.5a.75.75 0 0 1 0 1.5h-8.5a.25.25 0 0 0-.25.25v15.5c0 .138.112.25.25.25h15.5a.25.25 0 0 0 .25-.25v-8.5a.75.75 0 0 1 1.5 0v8.5a1.75 1.75 0 0 1-1.75 1.75H4.25a1.75 1.75 0 0 1-1.75-1.75V4.25Z" /></svg></a></div></div></div></div><div><div class="dpe-subtitle">Data Management Plan</div><div>Not accessible</div></div></div></div>
