modules/dpe/server/src/snapshots/dpe_server__fragments__tests__project_sidebar_with_entity_ids.snap
---
source: modules/dpe/server/src/fragments.rs
assertion_line: 631
expression: html
---
<div class="card card-bordered overflow-visible dpe-small p-4 space-y-4 text-gray-700 lg:w-96"><div class="space-y-4"><h2 class="dpe-title">Cite this Project</h2><div><h3 class="dpe-subtitle">Permalink</h3><div class="card card-bordered w-full bg-gray-50 text-gray-700 text-sm"><div class="card-body"><div class="flex items-center justify-between gap-3"><a href="https://ark.dasch.swiss/ark:/72163/1/0001" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline break-all flex-1">ark:/72163/1/0001</a><button class="btn btn-ghost px-1 py-0.5 text-xs tooltip tooltip-left flex-shrink-0 inline-flex items-center justify-center min-h-6 min-w-6" aria-label="Copy" data-tip="Copy" data-copy-text="https://ark.dasch.swiss/ark:/72163/1/0001" onclick="var status = this.nextElementSibling;
try {
navigator.clipboard.writeText(this.dataset.copyText);
this.setAttribute('data-tip', 'Copied!');
if (status) status.textContent = 'Copied to clipboard';
var btn = this;
setTimeout(function() {
btn.setAttribute('data-tip', 'Copy');
if (status) status.textContent = '';
}, 2000);
} catch(e) {
this.setAttribute('data-tip', 'Copy failed');
if (status) status.textContent = 'Copy failed';
}"><svg class="icon w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" aria-hidden="true" focusable="false"><rect x="128" y="128" width="336" height="336" rx="57" ry="57" style="fill:none;stroke:#000;stroke-linejoin:round;stroke-width:32px" />
<path d="M383.5,128l.5-24a56.16,56.16,0,0,0-56-56H112a64.19,64.19,0,0,0-64,64V328a56.16,56.16,0,0,0,56,56h24" style="fill:none;stroke:#000;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px" /></svg></button><span class="sr-only" role="status" aria-live="polite"></span></div></div></div></div><div><h3 class="dpe-subtitle">Citation</h3><div class="card card-bordered w-full bg-gray-50 text-gray-700 text-sm"><div class="card-body"><div class="flex items-center"><div class="flex-1">Fixture (2024)</div><button class="btn btn-ghost px-1 py-0.5 text-xs tooltip tooltip-left flex-shrink-0 inline-flex items-center justify-center min-h-6 min-w-6" aria-label="Copy" data-tip="Copy" data-copy-text="Fixture (2024)" onclick="var status = this.nextElementSibling;
try {
navigator.clipboard.writeText(this.dataset.copyText);
this.setAttribute('data-tip', 'Copied!');
if (status) status.textContent = 'Copied to clipboard';
var btn = this;
setTimeout(function() {
btn.setAttribute('data-tip', 'Copy');
if (status) status.textContent = '';
}, 2000);
} catch(e) {
this.setAttribute('data-tip', 'Copy failed');
if (status) status.textContent = 'Copy failed';
}"><svg class="icon w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" aria-hidden="true" focusable="false"><rect x="128" y="128" width="336" height="336" rx="57" ry="57" style="fill:none;stroke:#000;stroke-linejoin:round;stroke-width:32px" />
<path d="M383.5,128l.5-24a56.16,56.16,0,0,0-56-56H112a64.19,64.19,0,0,0-64,64V328a56.16,56.16,0,0,0,56,56h24" style="fill:none;stroke:#000;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px" /></svg></button><span class="sr-only" role="status" aria-live="polite"></span></div></div></div></div><div class="dpe-divider"></div><div><h3 class="dpe-title">Data Access</h3><div><div class="dpe-subtitle">Access Rights</div><div>Full Open Access</div></div></div><div><div class="dpe-subtitle">License</div><a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer" class="block mb-1"><img src="/assets/images/cc-licenses/by-4.0.svg" alt="Creative Commons Attribution 4.0 International License" class="h-8" title="CC BY 4.0"></a><div>(2024-01-01)</div></div><div><h3 class="dpe-subtitle">Copyright</h3><span>Lukas Rosenthaler</span></div><div><div class="dpe-subtitle">Authorship</div><div><div><span>Lukas Rosenthaler</span></div><div><span>Swiss National Science Foundation (SNSF)</span></div></div></div><div><h3 class="dpe-subtitle">Contact</h3><div class="space-y-2"><div class="card card-bordered w-full bg-gray-50 text-gray-700 text-sm"><div class="card-body"><div class="font-medium"><span>Lukas Rosenthaler</span></div><div class="text-gray-600">Assistant Professor, Prof. Dr.</div><div class="text-gray-600">Digital Humanities Lab (DHLab), University of Basel</div></div></div><div class="card card-bordered w-full bg-gray-50 text-gray-700 text-sm"><div class="card-body"><div class="text-gray-600">Swiss National Science Foundation (SNSF)</div></div></div></div></div><div class="dpe-divider"></div><h3 class="dpe-title">Project Timeline</h3><div><div class="dpe-subtitle">Period</div><div><span>2020-01-01 – 2025-12-31</span></div></div><div><div class="dpe-subtitle">Status</div><div>Ongoing</div></div><div class="dpe-divider"></div><h3 class="dpe-title">Funding</h3><div><div class="space-y-2"><div class="dpe-subtitle">Grants</div></div></div></div></div>
