modules/dpe/server/src/snapshots/dpe_server__fragments__tests__publications_tab.snap
---
source: modules/dpe/server/src/fragments.rs
expression: html.as_ref()
---
<div id="project-tabs" data-on:datastar-fetch="(evt.detail.type === 'error' || evt.detail.type === 'retries-failed') &amp;&amp; evt.detail.el.closest('#project-tabs') &amp;&amp; (window.location.href = evt.detail.el.getAttribute('href'))"><div role="tablist" aria-label="Project details" aria-orientation="horizontal" data-on:keydown="const tabs=[...evt.currentTarget.querySelectorAll('[role=tab]')];const idx=tabs.indexOf(evt.target);if(idx&lt;0)return;let next;if(evt.key==='ArrowRight')next=tabs[(idx+1)%tabs.length];else if(evt.key==='ArrowLeft')next=tabs[(idx-1+tabs.length)%tabs.length];else if(evt.key==='Home')next=tabs[0];else if(evt.key==='End')next=tabs[tabs.length-1];else if(evt.key===' '){evt.preventDefault();evt.target.click();return}else return;evt.preventDefault();next.focus()" class="tabs" style="border-width: 0;"><a href="/projects/0001?tab=overview" rel="external" role="tab" id="tab-overview" aria-selected="false" aria-controls="tab-panel" tabindex="-1" data-on:click__prevent="@get('/projects/0001/tab/overview', {retry: 'never'})" data-indicator:_tab_loading class="tab-label"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024" fill="currentColor" class="tab-icon"><path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z" />
<path d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z" /></svg><span>Overview</span></a><a href="/projects/0001?tab=publications" rel="external" role="tab" id="tab-publications" aria-selected="true" aria-controls="tab-panel" tabindex="0" data-on:click__prevent="@get('/projects/0001/tab/publications', {retry: 'never'})" data-indicator:_tab_loading class="tab-label !text-primary-600 !border-primary-600"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="tab-icon"><path d="M7 18H17V16H7V18Z" fill="currentColor" />
<path d="M17 14H7V12H17V14Z" fill="currentColor" />
<path d="M7 10H11V8H7V10Z" fill="currentColor" />
<path fill-rule="evenodd" clip-rule="evenodd" d="M6 2C4.34315 2 3 3.34315 3 5V19C3 20.6569 4.34315 22 6 22H18C19.6569 22 21 20.6569 21 19V9C21 5.13401 17.866 2 14 2H6ZM6 4H13V9H19V19C19 19.5523 18.5523 20 18 20H6C5.44772 20 5 19.5523 5 19V5C5 4.44772 5.44772 4 6 4ZM15 4.10002C16.6113 4.4271 17.9413 5.52906 18.584 7H15V4.10002Z" fill="currentColor" /></svg><span>Publications</span></a><a href="/projects/0001?tab=contributors" rel="external" role="tab" id="tab-contributors" aria-selected="false" aria-controls="tab-panel" tabindex="-1" data-on:click__prevent="@get('/projects/0001/tab/contributors', {retry: 'never'})" data-indicator:_tab_loading class="tab-label"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="tab-icon"><path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1zm-7.978-1L7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002-.014.002zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0M6.936 9.28a6 6 0 0 0-1.23-.247A7 7 0 0 0 5 9c-4 0-5 3-5 4q0 1 1 1h4.216A2.24 2.24 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816M4.92 10A5.5 5.5 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0m3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4" /></svg><span>Contributors</span></a></div><div id="tab-panel" role="tabpanel" aria-labelledby="tab-publications" class="tab-panel" style="display: block;"><div class="space-y-4"><div><h3 class="dpe-subtitle">Abstract</h3><p class="text-sm text-gray-700">An example abstract</p></div><div><div><h3 class="dpe-subtitle">Publications</h3><div class="space-y-2 text-sm"><div class="card card-bordered w-full bg-gray-50 text-gray-700 text-sm"><div class="card-body"><span>Test Publication (2024)<!> </span><span class="ml-2"><a href="https://example.org/pub" class="link">https://example.org/pub<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024" fill="currentColor" class="icon w-3 h-3"><path d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h360c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H184V184h656v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V144c0-17.7-14.3-32-32-32ZM770.87 824.869l-52.2 52.2c-4.7 4.7-1.9 12.8 4.7 13.6l179.4 21c5.1.6 9.5-3.7 8.9-8.9l-21-179.4c-.8-6.6-8.9-9.4-13.6-4.7l-52.4 52.4-256.2-256.2c-3.1-3.1-8.2-3.1-11.3 0l-42.4 42.4c-3.1 3.1-3.1 8.2 0 11.3l256.1 256.3Z" transform="matrix(1 0 0 -1 0 1024)" /></svg></a></span></div></div><!></div></div></div></div></div></div>
