modules/dpe/server/src/snapshots/dpe_server__fragments__tests__sse_overview_response.snap
---
source: modules/dpe/server/src/fragments.rs
assertion_line: 548
expression: body_str.as_ref()
---
event: datastar-patch-elements
data: selector #project-tabs
data: useViewTransition true
data: elements <div id="project-tabs" data-on:datastar-fetch="(evt.detail.type === 'error' || evt.detail.type === 'retries-failed') &amp;&amp; evt.detail.el.closest('#project-tabs') &amp;&amp; (window.location.href = evt.detail.el.getAttribute('href'))"><div class="tabs" role="tablist" aria-label="Project details" aria-orientation="horizontal" data-on:keydown="const tabs=[...evt.currentTarget.querySelectorAll('[role=tab]')];const idx=tabs.indexOf(evt.target);if(idx&lt;0)return;let next;if(evt.key==='ArrowRight')next=tabs[(idx+1)%tabs.length];else if(evt.key==='ArrowLeft')next=tabs[(idx-1+tabs.length)%tabs.length];else if(evt.key==='Home')next=tabs[0];else if(evt.key==='End')next=tabs[tabs.length-1];else if(evt.key===' '){evt.preventDefault();evt.target.click();return}else return;evt.preventDefault();next.focus()"><a href="/dpe/projects/0803?tab=overview" rel="external" role="tab" id="tab-overview" aria-selected="true" aria-controls="tab-panel" tabindex="0" data-on:click__prevent="@get('/dpe/projects/0803/tab/overview', {retry: 'never', retryMaxCount: 0})" data-indicator:_tab_loading class="tab-label !text-primary-600 !border-primary-600"><svg class="tab-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024" fill="currentColor"><path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z" />
data: elements <path d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z" /></svg><span>Overview</span></a><a href="/dpe/projects/0803?tab=publications" rel="external" role="tab" id="tab-publications" aria-selected="false" aria-controls="tab-panel" tabindex="-1" data-on:click__prevent="@get('/dpe/projects/0803/tab/publications', {retry: 'never', retryMaxCount: 0})" data-indicator:_tab_loading class="tab-label"><svg class="tab-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M7 18H17V16H7V18Z" fill="currentColor" />
data: elements <path d="M17 14H7V12H17V14Z" fill="currentColor" />
data: elements <path d="M7 10H11V8H7V10Z" fill="currentColor" />
data: elements <path fill-rule="evenodd" clip-rule="evenodd" d="M6 2C4.34315 2 3 3.34315 3 5V19C3 20.6569 4.34315 22 6 22H18C19.6569 22 21 20.6569 21 19V9C21 5.13401 17.866 2 14 2H6ZM6 4H13V9H19V19C19 19.5523 18.5523 20 18 20H6C5.44772 20 5 19.5523 5 19V5C5 4.44772 5.44772 4 6 4ZM15 4.10002C16.6113 4.4271 17.9413 5.52906 18.584 7H15V4.10002Z" fill="currentColor" /></svg><span>Publications</span></a><a href="/dpe/projects/0803?tab=contributors" rel="external" role="tab" id="tab-contributors" aria-selected="false" aria-controls="tab-panel" tabindex="-1" data-on:click__prevent="@get('/dpe/projects/0803/tab/contributors', {retry: 'never', retryMaxCount: 0})" data-indicator:_tab_loading class="tab-label"><svg class="tab-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"><path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1zm-7.978-1L7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002-.014.002zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0M6.936 9.28a6 6 0 0 0-1.23-.247A7 7 0 0 0 5 9c-4 0-5 3-5 4q0 1 1 1h4.216A2.24 2.24 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816M4.92 10A5.5 5.5 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0m3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4" /></svg><span>Contributors</span></a></div><div id="tab-panel" class="tab-panel" style="display: block" role="tabpanel" aria-labelledby="tab-overview"><div class="space-y-4"><div><h3 class="dpe-subtitle">Abstract</h3><p class="text-sm text-gray-700">The interdisciplinary research project &quot;The image sequences of Basel's early prints: Late Medieval didactic didactics as an image-text reading&quot; combines a comprehensive art scholarly analysis of the links between images and texts in the illustrated incunabula in Basel with the digitization of the holdings of the University Library and the development of an electronic edition in the form of a new kind of Web-0.2 application. The project is carried out by Kunsthistorische Seminar of the University of Basel (Prof. B. Schellewald) and Digital Humanities Lab of the University of Basel (Prof. Dr. L. Rosenthaler).  The core of the digital edition consists of around twenty richly illustrated early prints from four different Basel officers. Many of them appeared in several editions before 1500, some of them in German and Latin at almost the same time. It is an extraordinarily varied production; in addition to the Mirror of Salvation, there is a novel, the Melusine, the travelogues of Jean de Mandeville, some prayer and edification books, theological writings, Lent sermons, the lives of Saints Fridolin and Meinrad, the famous ship of fools and the knight of Thurn.  The Internet publication makes the digitized corpus of these early prints usable for the scientific edition as well as for the exploration of images and texts through the possibilities of non-linear linking and commenting on the images and texts. Existing and emerging online editions can also be linked to it, which optimises the use of databases from other institutions with regard to our corpus.</p></div><div><h3 class="dpe-subtitle">Type of Data</h3><div class="flex flex-wrap gap-1.5"><span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-primary-50 text-primary-700">Image</span></div></div><div><h3 class="dpe-subtitle">Data Languages</h3><div class="flex flex-wrap gap-1.5"><span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-neutral-100 text-neutral-700">German</span><span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-neutral-100 text-neutral-700">Latin</span></div></div><div><h3 class="dpe-subtitle">Keywords</h3><div class="flex flex-wrap gap-2"><span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-neutral-100 text-neutral-700">Basel</span><span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-neutral-100 text-neutral-700">Contectualisation of images</span><span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-neutral-100 text-neutral-700">Late Middle Ages</span><span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-neutral-100 text-neutral-700">Letterpress Printing</span></div></div><div><h3 class="dpe-subtitle">Disciplines</h3><div class="flex flex-wrap gap-1.5"><span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-primary-50 text-primary-700">10404 Visual arts and Art history</span></div></div><div><h3 class="dpe-subtitle">Temporal Coverage</h3><div class="flex flex-wrap gap-1.5"><span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-primary-50 text-primary-700">Late Middle Ages (en)</span></div></div><div><h3 class="dpe-subtitle">Spatial Coverage</h3><div class="flex flex-wrap gap-1.5"><a href="https://www.geonames.org/2661604/basel.html" target="_blank" rel="noopener noreferrer" class="tooltip" data-tip="https://www.geonames.org/2661604/basel.html"><span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-primary-50 text-primary-700">Basel</span></a></div></div></div></div></div>

event: datastar-patch-elements
data: selector body
data: mode append
data: elements <script data-effect="el.remove()">history.replaceState({}, '', '/dpe/projects/0803?tab=overview')</script>

event: datastar-patch-elements
data: selector body
data: mode append
data: elements <script data-effect="el.remove()">document.getElementById('tab-overview')?.focus()</script>
